--- a/src/main/resources/scene.fxml
+++ b/src/main/resources/scene.fxml
@@ -12,115 +12,124 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="444.0" minWidth="10.0" prefWidth="203.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="716.0" minWidth="10.0" prefWidth="697.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <GridPane style="-fx-background-color: #045D56;">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="194.0" minHeight="0.0" prefHeight="71.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="523.0" minHeight="10.0" prefHeight="523.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <AnchorPane>
-               <children>
-                  <Label layoutX="14.0" layoutY="20.0" text="Inventory App" textAlignment="CENTER" textFill="WHITE">
-                     <font>
-                        <Font name="Droid Sans Fallback" size="25.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
-            <AnchorPane GridPane.rowIndex="1">
-               <children>
-                  <AnchorPane layoutX="64.0" layoutY="14.0" prefHeight="75.0" prefWidth="75.0">
-                     <children>
-                        <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="23.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@save.png" />
-                           </image>
-                        </ImageView>
-                        <Label layoutX="20.0" layoutY="44.0" prefHeight="5.0" text="SAVE" textFill="WHITE">
-                           <font>
-                              <Font name="Droid Sans Fallback" size="13.0" />
-                           </font>
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0"
+          prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="ucf.assignments.MainController">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="444.0" minWidth="10.0" prefWidth="203.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="716.0" minWidth="10.0" prefWidth="697.0"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+    </rowConstraints>
+    <children>
+        <GridPane style="-fx-background-color: #045D56;">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="194.0" minHeight="0.0" prefHeight="71.0" vgrow="SOMETIMES"/>
+                <RowConstraints maxHeight="523.0" minHeight="10.0" prefHeight="523.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <AnchorPane>
+                    <children>
+                        <Label layoutX="14.0" layoutY="20.0" text="Inventory App" textAlignment="CENTER"
+                               textFill="WHITE">
+                            <font>
+                                <Font name="Droid Sans Fallback" size="25.0"/>
+                            </font>
                         </Label>
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane layoutX="64.0" layoutY="89.0" prefHeight="75.0" prefWidth="75.0">
-                     <children>
-                        <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="23.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@open.png" />
-                           </image>
-                        </ImageView>
-                        <Label layoutX="20.0" layoutY="44.0" prefHeight="5.0" text="OPEN" textFill="WHITE">
-                           <font>
-                              <Font name="Droid Sans Fallback" size="13.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane layoutX="64.0" layoutY="164.0" prefHeight="75.0" prefWidth="75.0">
-                     <children>
-                        <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="23.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@search.png" />
-                           </image>
-                        </ImageView>
-                        <Label layoutX="11.0" layoutY="44.0" prefHeight="5.0" text="SEARCH" textFill="WHITE">
-                           <font>
-                              <Font name="Droid Sans Fallback" size="13.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane layoutX="64.0" layoutY="239.0" prefHeight="75.0" prefWidth="75.0">
-                     <children>
-                        <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="23.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@sort.png" />
-                           </image>
-                        </ImageView>
-                        <Label layoutX="20.0" layoutY="44.0" prefHeight="5.0" text="SORT" textFill="WHITE">
-                           <font>
-                              <Font name="Droid Sans Fallback" size="13.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane layoutX="27.0" layoutY="327.0" prefHeight="50.0">
-                     <children>
-                        <Label layoutX="3.0" text="Sort/Search Category:" textFill="WHITE">
-                           <font>
-                              <Font name="Droid Sans Fallback" size="13.0" />
-                           </font>
-                        </Label>
-                        <ChoiceBox layoutY="24.0" prefWidth="150.0" style="-fx-background-color: #1EB980;" />
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane layoutX="26.0" layoutY="392.0" prefHeight="50.0">
-                     <children>
-                        <Label layoutX="3.0" text="Search:" textFill="WHITE">
-                           <font>
-                              <Font name="Droid Sans Fallback" size="13.0" />
-                           </font>
-                        </Label>
-                        <TextField layoutY="24.0" maxWidth="-Infinity" prefHeight="24.0" prefWidth="150.0" style="-fx-background-color: #1eb980;" />
-                     </children>
-                  </AnchorPane>
-               </children>
-            </AnchorPane>
-         </children>
-      </GridPane>
-      <ListView prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #045D56;" GridPane.columnIndex="1" />
-   </children>
+                    </children>
+                </AnchorPane>
+                <AnchorPane GridPane.rowIndex="1">
+                    <children>
+                        <AnchorPane layoutX="64.0" layoutY="14.0" prefHeight="75.0" prefWidth="75.0">
+                            <children>
+                                <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="23.0" layoutY="14.0"
+                                           pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@save.png"/>
+                                    </image>
+                                </ImageView>
+                                <Label layoutX="20.0" layoutY="44.0" prefHeight="5.0" text="SAVE" textFill="WHITE">
+                                    <font>
+                                        <Font name="Droid Sans Fallback" size="13.0"/>
+                                    </font>
+                                </Label>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="64.0" layoutY="89.0" prefHeight="75.0" prefWidth="75.0">
+                            <children>
+                                <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="23.0" layoutY="14.0"
+                                           pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@open.png"/>
+                                    </image>
+                                </ImageView>
+                                <Label layoutX="20.0" layoutY="44.0" prefHeight="5.0" text="OPEN" textFill="WHITE">
+                                    <font>
+                                        <Font name="Droid Sans Fallback" size="13.0"/>
+                                    </font>
+                                </Label>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="64.0" layoutY="164.0" prefHeight="75.0" prefWidth="75.0">
+                            <children>
+                                <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="23.0" layoutY="14.0"
+                                           pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@search.png"/>
+                                    </image>
+                                </ImageView>
+                                <Label layoutX="11.0" layoutY="44.0" prefHeight="5.0" text="SEARCH" textFill="WHITE">
+                                    <font>
+                                        <Font name="Droid Sans Fallback" size="13.0"/>
+                                    </font>
+                                </Label>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="64.0" layoutY="239.0" prefHeight="75.0" prefWidth="75.0">
+                            <children>
+                                <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="23.0" layoutY="14.0"
+                                           pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@sort.png"/>
+                                    </image>
+                                </ImageView>
+                                <Label layoutX="20.0" layoutY="44.0" prefHeight="5.0" text="SORT" textFill="WHITE">
+                                    <font>
+                                        <Font name="Droid Sans Fallback" size="13.0"/>
+                                    </font>
+                                </Label>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="27.0" layoutY="327.0" prefHeight="50.0">
+                            <children>
+                                <Label layoutX="3.0" text="Sort/Search Category:" textFill="WHITE">
+                                    <font>
+                                        <Font name="Droid Sans Fallback" size="13.0"/>
+                                    </font>
+                                </Label>
+                                <ChoiceBox layoutY="24.0" prefWidth="150.0" style="-fx-background-color: #1EB980;"/>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="26.0" layoutY="392.0" prefHeight="50.0">
+                            <children>
+                                <Label layoutX="3.0" text="Search:" textFill="WHITE">
+                                    <font>
+                                        <Font name="Droid Sans Fallback" size="13.0"/>
+                                    </font>
+                                </Label>
+                                <TextField layoutY="24.0" maxWidth="-Infinity" prefHeight="24.0" prefWidth="150.0"
+                                           style="-fx-background-color: #1eb980;"/>
+                            </children>
+                        </AnchorPane>
+                    </children>
+                </AnchorPane>
+            </children>
+        </GridPane>
+        <ListView fx:id="list_view" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #045D56;"
+                  GridPane.columnIndex="1"/>
+    </children>
 </GridPane>
