--- a/src/main/resources/dialog.fxml
+++ b/src/main/resources/dialog.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: #045D56;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.ItemDataDialog">
+<AnchorPane prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: #045D56;" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.ItemDataDialog">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Item Name:" textFill="WHITE">
          <font>
